--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -17,6 +17,12 @@
   </p>
 
 
+  <p><%= link_to 'Login', new_session_path, remote: true, id: "login-button"%></p>
+  <hr>
+
+  <p><%= link_to 'Signup', new_user_path, remote: true, id: "signup-button"%></p>
+  <hr>
+
   <!-- Login Form -->
   <p>
   <div id="login-form" style="display:none;" ><%= render 'sessions/form' %></div>
