--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,29 +16,25 @@
 
   <div class="container-fluid">
 
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <nav class="navbar navbar-default ">
       <div class="container-fluid">
         <div class="navbar-header">
           <a class="navbar-brand" href="/">
             <%= image_tag("todo-icon.png", :alt => "icon", class: "navbar-icon") %>
           </a>
           <p class="navbar-text" id="app-title">
-            Patrick's Todo App
+            Patrick's To-do List App
           </p>
 
-<!--           <div class="collapse navbar-collapse navbar-right" id="navbar-buttons"
-            <ul class="nav navbar-nav ">
-              <li><%= link_to 'Login', new_session_path, remote: true, id: "login-button"%></li>
-              <li><%= link_to 'Signup', new_user_path, remote: true, id: "signup-button"%></li>
-              <li><p class="navbar-text" id="signed-in-text"><%="Signed in #{session[:email]}"%></p></li>
-              <li>
-                  <%= link_to 'Logout', sign_out_path, id:"logout-button"%>
-              </li>
-            </ul>
-          </div><!-- /.navbar-collapse -->
-<!--          </div>
-      </div>
- -->
+        <div class="collapse navbar-collapse navbar-right" id="navbar-buttons">
+          <ul class="nav navbar-nav ">
+            <% if signed_in? %>
+            <li>
+              <%= link_to 'Logout', sign_out_path, id:"logout-button"%>
+            </li>
+            <% end %>
+          </ul>
+        </div><!-- /.navbar-collapse -->
 </nav>
 
 <%= yield %>
