--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,22 @@
 </head>
 <body>
 
-  <div class="container-fluid">
+  <div class="container">
+        <div class="header clearfix">
+          <nav>
+            <ul class="nav nav-pills pull-right">
+              <li role="presentation"><a href="/">Home</a></li>
+              <!-- <li role="presentation"><a href="#">About</a></li> -->
+              <li role="presentation"><a href="http://www.patrickgrenning.com/">PatrickGrenning.com</a></li>
+              <% if signed_in? %>
+                <li role="presentation"><%= link_to 'Logout', sign_out_path, id:"logout-button"%></li>
+              <% end %>
+            </ul>
+          </nav>
+          <h3 class="text-muted">Patrick's To-do List App</h3>
+          </div>
+
+  <!-- <div class="container-fluid">
 
     <nav class="navbar navbar-default ">
       <div class="container-fluid">
@@ -34,12 +49,17 @@
             </li>
             <% end %>
           </ul>
-        </div><!-- /.navbar-collapse -->
-</nav>
+        </div><! /.navbar-collapse -->
+<!-- </nav> -->
 
 <%= yield %>
 
-  </div>
+  <footer class="footer">
+          <p>&copy; Patrick Grenning 2015</p>
+        </footer>
+
+  </div> <!-- /container -->
+
 
 </body>
 </html>
