--- a/app/views/welcome/login.html.erb
+++ b/app/views/welcome/login.html.erb
@@ -14,7 +14,7 @@
       <p><%= link_to 'Login', new_session_path, remote: false, id: "login-button", class: "btn btn btn-success"%></p>
      </div>
 
-     <div class="row marketing">
+     <!-- <div class="row marketing">
        <div class="col-lg-6">
          <h4>Overview</h4>
          <p>In this challenge I created a to-do list web application in Rails.  My main goal was to practice building a Ruby on Rails app that was asynchronous.  Once logged in users can create, edit, delete, and reorder their to-do items without reloading the page.  To reorder to-do items click and drag the item.</p>
@@ -43,17 +43,6 @@
            <li><b>Bootstrap</b> for front-end user interface components</li>
           </ul>
          </p>
-       </div>
-
-       <!-- <div class="col-lg-6">
-         <h4>Subheading</h4>
-         <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
-
-         <h4>Subheading</h4>
-         <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
-
-         <h4>Subheading</h4>
-         <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
        </div> -->
      </div>
 
