--- a/app/views/todos/update.js.erb
+++ b/app/views/todos/update.js.erb
@@ -1,4 +1,4 @@
-$("#todo-description-field-<%=@todo_id%>").html("<%= @description %>");
+$("#todo-description-field-<%=@todo.id%>").html("<%= @description %>");
 
 
 
