--- a/app/views/welcome/login.html.erb
+++ b/app/views/welcome/login.html.erb
@@ -1,17 +1,11 @@
-<!-- <p><%= link_to 'Login', new_session_path, remote: false, id: "login-button"%></p>
-<hr>
-
-<p><%= link_to 'Signup', new_user_path, id: "signup-button"%></p>
-<hr>
- -->
 
 <div class="jumbotron">
        <!-- <h1>Jumbotron heading</h1> -->
        <p class="lead">Thanks for checking out my to-do list application.  Create an account to try it out.</p>
 <!--        <p><a class="btn btn-lg btn-success" href="#" role="button">Sign up today</a></p>
  -->
-      <p><%= link_to 'Create an account', new_user_path, id: "signup-button", class: "btn btn btn-success"%></p>
-      <p><%= link_to 'Login', new_session_path, remote: false, id: "login-button", class: "btn btn btn-success"%></p>
+      <p><%= link_to 'Create an account', new_user_registration_path, id: "signup-button", class: "btn btn btn-success"%></p>
+      <p><%= link_to 'Login', new_user_session_path, remote: false, id: "login-button", class: "btn btn btn-success"%></p>
      </div>
 
      <!-- <div class="row marketing">
