--- a/app/views/todos/_index.html.erb
+++ b/app/views/todos/_index.html.erb
@@ -11,7 +11,7 @@
 
   </tr>
 
-  <% @todos.each do |todo| %>
+  <% current_user.todos.each do |todo| %>
     <!-- button_status is complete if todo[is_complete] is true
     else, it is incomplete -->
     <% if todo["is_complete"] %>
@@ -26,7 +26,7 @@
       <!-- <td><%=todo["id"]%></td> -->
       <td><span id="todo-description-field-<%=todo["id"]%>"><%=todo["description"]%></span></td>
       <!-- <td>todo["is_complete"]</td> -->
-      <td>
+      <td><span id="todo-status-field-<%=todo["id"]%>">
         <!-- When the complete/incomplete button is clicked send the updated status as a parameter -->
         <% if todo["is_complete"].to_s == "true" %>
           <% @updated_status = "false" %>
@@ -35,8 +35,8 @@
         <% end %>
 
         <%= button_to button_status,
-        update_todo_path( todo_id: todo["id"],
-                          description: todo["description"],
+        update_todo_status_path( todo_id: todo["id"],
+                          # description: todo["description"],
                           is_complete: @updated_status
                           ),
         remote: true,
