--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -162,12 +162,13 @@ body {
 .handle:hover{cursor: move;}
 
 #todos{
-  background-color: #eee;
+  /*background-color: #eee;*/
 }
 
 .todo-row{
-  background-color: white
+  /*background-color: lightgrey;*/
 }
+
 
 .container{
   background: white;
@@ -176,7 +177,6 @@ body {
   -moz-border-radius: 15px;
 }
 
-#todos-table{
-}
+
 
 
