--- a/app/views/welcome/login.html.erb
+++ b/app/views/welcome/login.html.erb
@@ -4,8 +4,8 @@
        <p class="lead">Thanks for checking out my to-do list application.  Create an account to try it out.</p>
 <!--        <p><a class="btn btn-lg btn-success" href="#" role="button">Sign up today</a></p>
  -->
-      <p><%= link_to 'Create an account', new_user_registration_path, id: "signup-button", class: "btn btn btn-success"%></p>
-      <p><%= link_to 'Login', new_user_session_path, remote: false, id: "login-button", class: "btn btn btn-success"%></p>
+      <%= link_to 'Create an account', new_user_registration_path, id: "signup-button", class: "btn btn btn-default"%>
+      <%= link_to 'Login', new_user_session_path, remote: false, id: "login-button", class: "btn btn btn-default"%>
      </div>
 
      <!-- <div class="row marketing">
