--- a/app/views/welcome/login.html.erb
+++ b/app/views/welcome/login.html.erb
@@ -1,12 +1,13 @@
 
-<div class="jumbotron">
+<div class="">
        <!-- <h1>Jumbotron heading</h1> -->
        <p class="lead">Thanks for checking out my to-do list application.  Create an account to try it out.</p>
 <!--        <p><a class="btn btn-lg btn-success" href="#" role="button">Sign up today</a></p>
  -->
-      <%= link_to 'Create an account', new_user_registration_path, id: "signup-button", class: "btn btn btn-default"%>
-      <%= link_to 'Login', new_user_session_path, remote: false, id: "login-button", class: "btn btn btn-default"%>
+      <%= link_to 'Create an account', new_user_registration_path, id: "signup-button", class: "btn btn-default"%>
+      <%= link_to 'Login', new_user_session_path, remote: false, id: "login-button", class: "btn btn-default"%>
      </div>
+     <br>
 
      <!-- <div class="row marketing">
        <div class="col-lg-6">
