--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
   <%= csrf_meta_tags %>
   <script>
   </script>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
 <body>
