Use app without creating an account

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,9 +17,9 @@
         <div class="header clearfix">
           <nav>
             <ul class="nav nav-pills pull-right">
-              <li role="presentation"><a href="/">Home</a></li>
+              <!-- <li role="presentation"><a href="/">Home</a></li> -->
                   <% if user_signed_in? %>
-                    <li role="presentation"><%= link_to 'Logout', destroy_user_session_path, :method => :delete, id:"logout-button"%></li>
+                    <li role="presentation"><%= link_to 'New Session', destroy_user_session_path, :method => :delete, id:"logout-button"%></li>
                   <% else %>
                     <li role="presentation"><%= link_to 'Register', new_user_registration_path %></li>
                     <li role="presentation"><%= link_to 'Sign in', new_user_session_path %><li>
@@ -31,7 +31,7 @@
 
 
     <!-- from devise -->
-    <% if alert or notice %>
+    <% if false #alert or notice %>
       <p class="notice"><%= notice %></p>
       <p class="alert"><%= alert %></p>
     <% end %>
