--- a/app/views/welcome/login.html.erb
+++ b/app/views/welcome/login.html.erb
@@ -1,13 +1,18 @@
 
 <div class="">
        <!-- <h1>Jumbotron heading</h1> -->
-       <p class="lead">Thanks for checking out my to-do list application.  Create an account to try it out.</p>
+       <p class="lead">Thanks for checking out my to-do list application.  Try it out as a guest below.</p>
+       <p class="lead">Drag and drop todo items to reorder them.</p>
 <!--        <p><a class="btn btn-lg btn-success" href="#" role="button">Sign up today</a></p>
  -->
+      <% if false %>
       <%= link_to 'Create an account', new_user_registration_path, id: "signup-button", class: "btn btn-default"%>
       <%= link_to 'Login', new_user_session_path, remote: false, id: "login-button", class: "btn btn-default"%>
+      <%end%>
+
      </div>
      <br>
+
 
      <!-- <div class="row marketing">
        <div class="col-lg-6">
@@ -39,5 +44,28 @@
           </ul>
          </p>
        </div> -->
-     </div>
+         <!-- Create Todo Form -->
+         <%if false %>
+         <p>
+           <%=link_to 'Create a Todo Item', new_todo_path, remote: true, class: "btn btn-success"%>
+         </p>
+         <% end %>
+
+         <p>
+           <%= render 'todos/form' %>
+         </p>
+         
+         <div id="todo-form"></div>
+
+         <!-- Todo Index -->
+           <div id="todo-index" id="table-container">
+             <%= render 'todos/index.html.erb' %>
+           </div>
+         <hr>
+       </div>
+
+
+
+</div>
+
 
